# link-collector

./: .gitignore  SKILL.md  TEST_REPORT.md  clean_index.py  collector.py  config.yaml  login_guide.py  login_wechat.py  login_wechat_simple.py  login_xueqiu.py  pyproject.toml  skill.py  wechat_login.py
cookies/: xueqiu.json
link_collector/: __init__.py  classifier.py  cli.py  indexer.py  library.py  models.py  service.py
